--- a/README
+++ b/README
@@ -12,5 +12,5 @@
     b. Create Name server records in AWS pointing the domain name to droplet's IP address
 5. Enhacements
     a. Add nginx load balancer(to expose port 80)
-    b. Add SSL certificate
+    b. Add SSL certificate(run certbot to obtain SSL certificate)
     c. CI/CD pipeline - github actions
