updating github actions yaml

--- a/README
+++ b/README
@@ -23,4 +23,12 @@
             Add two secrets: DO_SSH_PRIVATE_KEY (contents of your private key file) and DO_SSH_USERNAME (your server username).
         c3. Add known Hosts
             ssh-keyscan -H example.com >> ~/.ssh/known_hosts
+            Add this snippet to github actions workflows, deploy.yaml
+
+            - name: Add remote server to known hosts
+            run: |
+                mkdir -p ~/.ssh
+                echo "159.65.184.119(your IP here) ssh-rsa AAAAB3....." >> ~/.ssh/known_hosts
+                echo "159.65.184.119(your IP here) ecdsa-sha2-nistp256 AAAAE2Vj....." >> ~/.ssh/known_hosts
+                echo "159.65.184.119(your IP here) ssh-ed25519 AAAAC3NzaC1lZDI1....." >> ~/.ssh/known_hosts
 
